deployments/k8s/my-app-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app-db-service
spec:
  selector:
    app: my-app-db
  ports:
    - protocol: "TCP"
      port: 5432
      targetPort: 5432
  type: ClusterIP
