deployments/k8s/my-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
spec:
  selector:
    app: my-app-service
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: debug
      protocol: TCP
      port: 5005
      targetPort: 5005
  type: NodePort
